// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInformations /> should render catégorie 1`] = `
.c4 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c8 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c7 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c7 *::-ms-backdrop,
.c7 {
  padding-right: 1.6rem;
}

.c7:invalid {
  border-color: #eb5757;
}

.c7:disabled {
  background-color: #e4e8ef;
}

.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c3 {
  font-weight: 600;
}

.c6 {
  width: 40rem;
}

.c1 {
  margin-bottom: 3.2rem;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

@media (max-width:600px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie professionnelle"
    >
      <span
        class="c3"
      >
        Quelle est la catégorie professionnelle du salarié ?
      </span>
      <span
        class="c4"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </label>
    <div
      class="c5 c6"
    >
      <select
        class="c7"
        id="input-criteria.catégorie professionnelle"
        name="criteria.catégorie professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="4| Ouvriers"
        >
          Ouvriers
        </option>
        <option
          value="16| Employés"
        >
          Employés
        </option>
        <option
          value="23| Agents de maîtrise"
        >
          Agents de maîtrise
        </option>
        <option
          value="28| Techniciens"
        >
          Techniciens
        </option>
        <option
          value="60| Ingénieurs, Cadres"
        >
          Ingénieurs, Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c8"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepInformations /> should render groupe 1`] = `
.c4 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c8 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c7 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c7 *::-ms-backdrop,
.c7 {
  padding-right: 1.6rem;
}

.c7:invalid {
  border-color: #eb5757;
}

.c7:disabled {
  background-color: #e4e8ef;
}

.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c3 {
  font-weight: 600;
}

.c6 {
  width: 40rem;
}

.c1 {
  margin-bottom: 3.2rem;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

@media (max-width:600px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie professionnelle"
    >
      <span
        class="c3"
      >
        Quelle est la catégorie professionnelle du salarié ?
      </span>
      <span
        class="c4"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </label>
    <div
      class="c5 c6"
    >
      <select
        class="c7"
        id="input-criteria.catégorie professionnelle"
        name="criteria.catégorie professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="4| Ouvriers"
        >
          Ouvriers
        </option>
        <option
          value="16| Employés"
        >
          Employés
        </option>
        <option
          value="23| Agents de maîtrise"
        >
          Agents de maîtrise
        </option>
        <option
          value="28| Techniciens"
        >
          Techniciens
        </option>
        <option
          value="60| Ingénieurs, Cadres"
        >
          Ingénieurs, Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c8"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.groupe"
    >
      <span
        class="c3"
      >
        Quel est le groupe professionnel du salarié ?
      </span>
      <span
        class="c4"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </label>
    <div
      class="c5 c6"
    >
      <select
        class="c7"
        id="input-criteria.groupe"
        name="criteria.groupe"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="6| IV"
        >
          IV
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c8"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
